# Agent-As-Data

./: EDGE.md  README.md  install.sh
agent-book/: 01-agent-as-data.md  02-mathematics-as-meta.md  03-metal-at-core.md  04-meta-kube.md  05-storm.md  06-superstorm.md  07-repair-agent.md  08-release-gates.md  09-operational-excellence.md  README.md
agents/: repair-agent.yaml
book-site/: index.html
contracts/: README.md
crds/: agent-crd.yaml
deploy/: fabric-reconciler-java.yaml  fabric-reconciler.yaml  surrealdb.yaml
docs/: agent-destination.md  agent-eye.md  agentic-operational-excellence-at-scale.md  architecture.md  cortex.md  k8s-reconciliation-flow.md  meta-mathematical-model.md  multi-modal-platform.md  multi-path-platform.md  multi-tenant-platform.md  multivariate-platform.md  native-mac-dmg-build.md  platform-core-doctrine.md  repair-agent.md  saas-architecture.md  self-servable.md
fabric-browser-mac/: README.md  index.html  package.json  vite.config.ts
fabric-core/: CONTRACT.md  README.md  SURFACE.md  actions.json
fabric-edge-core/: README.md
fabric-mac-core/: README.md  package.json
fabric-metal-core/: README.md
fabricore-os/: CONTRACT.md  FLOW.md  README.md  build-fabric-dmg.sh  build-java.sh  build-single-binary.sh  install.sh
k8s/: fabric-platform-flow.yaml
operator/: Dockerfile  package.json
operator-java/: Dockerfile  pom.xml
platform/: README.md
pod-manager/: README.md
policies/: tenant-isolation.rego
scripts/: self-check.sh  (+3 more)
sdk-python/: README.md  pyproject.toml
sdk-python/src/unboxd_fabric_agent_sdk/: __init__.py
(+72 files in other folders)
